--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     background-color: white;
     margin: 0px;
+    overflow-x: hidden;
+    
 }
 
 header{
@@ -74,6 +76,7 @@ header{
     margin: 0px;
     padding: 0px;
     overflow-y: auto;
+    overflow-x: hidden;
     
 }
 
@@ -129,14 +132,26 @@ header{
     border-bottom: 1px solid #ddd;
 }
 
-.second-earch-bar-container input {
+.second-search-bar-container input {
     width: 80%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ddd;
-    border-radius: 5px 0 0 5px;
+    border-radius: 30px;
     outline: none;
 }
+
+.second-search-bar-container button {
+   position: absolute;
+   right: 45px;
+   background-color: transparent;
+   border: none;
+   font-size: 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
 
 .search-bar-container .second-close-button {
     padding: 10px;
@@ -152,16 +167,18 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.9);
+    height: 1000%;
+    background: white;
     transform: translateX(100%);
     transition: transform 0.5s ease-in-out;
     overflow-y: auto; 
-    z-index: 100;
+    z-index: 1000;
+    pointer-events: none; 
 }
 
 .second-sliding-page.active {
     transform: translateX(0);
+    pointer-events: auto;
 }
 
 .main-sliding-page-content {
