--- a/style.css
+++ b/style.css
@@ -314,10 +314,21 @@ header{
 
 .circle-container {
     display: flex;
-    justify-content: space-around;
     padding: 20px;
     border-bottom: 1px solid #ddd;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    /* Hide scrollbar but still allow scrolling */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+
 }
+
+.circle-container::-webkit-scrollbar {
+    display: none;  /* Chrome, Safari, and Opera */
+}
+
 
 .circle {
     width: 80px;
@@ -326,9 +337,10 @@ header{
     border-radius: 50%;
     cursor: pointer;
     text-decoration: none;
+  
 }
 
-.circle-wrapper{
+.circle-wrapper{ 
     width: 87px;
     height: 87px;
     background-color: white;
@@ -339,6 +351,19 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    box-sizing: content-box;
+    
+}
+
+.protective-wrapper{
+    margin-left:30px ;
+}
+
+.name {
+    margin-top: 7px; /* Space between circle and name */
+    font-size: 14px; /* Adjust font size as needed */
+    color: #333; /* Adjust text color as needed */
+    margin-left: 23px;
 }
 
 
@@ -367,7 +392,10 @@ header{
 }
 
 .post-page {
-    height: 300px;
+    height: 700px;
+    background-color: black;
+    color: white;
+    margin: 0px;
 }
 
 .post-content {
@@ -448,7 +476,6 @@ header{
     padding: 16px;
     box-sizing: border-box;
     display: flex;
-    background-color: rgb(226, 226, 226);
 }
 
 .grid-container::-webkit-scrollbar {
