--- a/style.css
+++ b/style.css
@@ -62,6 +62,18 @@ header{
     }
 }
 
+.logo-box{
+    width: 100px;
+    height: 40px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    cursor: pointer;
+}
+.fa-caret-down{
+    color: #999;
+}
+
 .main-sliding-page {
     position: fixed;
     top: 0;
@@ -79,6 +91,82 @@ header{
     overflow-x: hidden;
     
 }
+
+.third-sliding-page {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%; 
+    height: 100%;
+    background-color: #fff;
+    transition: left 0.3s ease;
+    z-index: 999; 
+    /* padding: 20px;  */
+    overflow-y: auto; 
+}
+
+.third-sliding-page.active {
+    left: 0;
+}
+
+.third-close-button {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: none;
+    border: none;
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+    z-index: 1001;
+}
+
+.sidebar {
+    flex-shrink: 0;
+    width: 95%;
+    padding: 20px;
+    margin-top: 100px;
+
+}
+
+.sidebar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sidebar ul li {
+    margin-bottom: 10px;
+    font-size: 17px;
+    font-family: Montserrat;
+}
+
+
+.montserrat-sidebar {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.sidebar ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.sidebar ul li a:hover {
+    background-color: #ddd;
+}
+
+
+section {
+    margin-bottom: 40px;
+}
+
 
 .second-search-bar {
     position: absolute;
@@ -298,120 +386,7 @@ header{
 }
 
 /* mobile version about me */
-.the-container{
-    display: flex;
-    justify-content: center;
-    margin-top: 40px;
-}
 
-.post-container {
-    width: 100%;
-    background-color: white;
-    border-radius: 10px;
-    overflow: hidden;
-    display: none;
-}
-
-.circle-container {
-    display: flex;
-    padding: 20px;
-    border-bottom: 1px solid #ddd;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-    /* Hide scrollbar but still allow scrolling */
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-
-
-}
-
-.circle-container::-webkit-scrollbar {
-    display: none;  /* Chrome, Safari, and Opera */
-}
-
-
-.circle {
-    width: 80px;
-    height: 80px;
-    background-color: #ddd;
-    border-radius: 50%;
-    cursor: pointer;
-    text-decoration: none;
-  
-}
-
-.circle-wrapper{ 
-    width: 87px;
-    height: 87px;
-    background-color: white;
-    border-radius: 50%;
-    cursor: pointer;
-    text-decoration: none;
-    border: 3px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: content-box;
-    
-}
-
-.protective-wrapper{
-    margin-left:30px ;
-}
-
-.name {
-    margin-top: 7px; /* Space between circle and name */
-    font-size: 14px; /* Adjust font size as needed */
-    color: #333; /* Adjust text color as needed */
-    margin-left: 23px;
-}
-
-
-.circle:hover {
-    background-color: #ccc;
-}
-
-.post-header {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-}
-
-.profile-picture {
-    width: 40px;
-    height: 40px;
-    background-color: #bbb;
-    border-radius: 50%;
-    margin-right: 10px;
-}
-
-.profile-name {
-    font-size: 18px;
-    font-weight: bold;
-}
-
-.post-page {
-    height: 700px;
-    background-color: black;
-    color: white;
-    margin: 0px;
-}
-
-.post-content {
-    display: none;
-}
-
-.post-content.active {
-    display: block;
-}
-
-/* chang 468 later */
-@media screen  and (max-width: 768px) {
-    .post-container {
-        display: block;
-    }
-}
 
 
 
