--- a/style.css
+++ b/style.css
@@ -653,3 +653,12 @@ section {
     }
 
 }
+
+
+/* About me Page */
+
+.main-page{
+    width: 100%;
+    height: 600px;
+    background-color: blue;
+}
