--- a/style.css
+++ b/style.css
@@ -487,6 +487,53 @@ section {
     margin: 8px 0;
 }
 
+/* four container box */
+
+.Outer-four-central-box {
+    margin: 15px;
+    border-radius: 10px;
+}
+.four-central-box {
+    background-color: whitesmoke;
+    border: 1px solid #ddd;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    border-radius: 10px;
+}
+.four-header {
+    font-size: 24px;
+    margin-bottom: 20px;
+    display: flex;
+}
+.four-boxes-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.four-box-container {
+    text-align: center;
+    cursor: pointer;
+}
+.four-box {
+    border: 1px solid #ccc;
+    height: 120px;
+    border-radius: 10px;
+    overflow: hidden; 
+    position: relative;
+}
+.four-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    border-radius: 10px; 
+}
+.four-box-text {
+    margin-top: 10px;
+    display: flex;
+    justify-content: start;
+}
+
 
 /* display box */
 
@@ -651,7 +698,7 @@ section {
     .search-body{
         display: none;
     }
-
+    
 }
 
 
@@ -661,4 +708,84 @@ section {
     width: 100%;
     height: 600px;
     background-color: blue;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    margin-top: 10px;
+    display: none;
+}
+
+.tab {
+    border-bottom: 1px solid #ccc;
+}
+
+.tab:last-child {
+    border-bottom: none;
+}
+
+.tab-button {
+    position: relative;
+    padding: 15px;
+    cursor: pointer;
+    text-align: start;
+    display: flex;
+    align-items: center;
+    transition: background-color 0.3s;
+    border: none;
+    width: 100%;
+    height: 100px;
+    font-size: 27px;
+    color: white;
+    overflow: hidden;
+}
+
+.tab-button img.tab-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1; 
+}
+
+.tab-button span {
+    position: relative;
+    z-index: 1;
+}
+
+.tab-button.active {
+    background-color: #fff;
+    border-bottom: 1px solid #ccc;
+}
+
+.tab-content {
+    display: none;
+    padding: 20px;
+    background-color: #fff;
+    position: relative;
+}
+
+.tab-content.active {
+    display: block;
+}
+
+.tab-content h2 {
+    margin-top: 0;
+}
+
+.tab-content p {
+    position: relative;
+}
+
+@media screen and (max-width: 767px) {
+    .container{
+        display: block;
+    }
+    
+
 }
