--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ section {
     
 }
 .four-central-box {
-    background-color: whitesmoke;
+    background-color: white;
     border: 1px solid #ddd;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -541,6 +541,51 @@ section {
         display: block;
     }
     
+}
+
+/* Giant card */
+
+.giant-card-container {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch;
+    margin-left: 14px;
+  }
+  
+  .giant-card {
+    min-width: 80%;
+    margin-right: 20px;
+    scroll-snap-align: start;
+    background-color: gray;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    height: 600px;
+  }
+
+  .giant-dots-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-right: 70px;
+  }
+  
+  .giant-card-dot {
+    height: 10px;
+    width: 10px;
+    margin: 0 5px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+  }
+  
+  .giant-card-dot.active {
+    background-color: #717171;
+  }
+
+  .giant-card-container::-webkit-scrollbar {
+    display: none; 
 }
 
 
