--- a/style.css
+++ b/style.css
@@ -601,6 +601,7 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
+    overflow-x: hidden;
   }
   
   .holder-genre-box {
