--- a/style.css
+++ b/style.css
@@ -671,7 +671,7 @@ section {
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   
   .holder-genre-box {
@@ -825,8 +825,6 @@ section {
     justify-content: start;
     align-items: center;
     height: 300px;
-    padding-left: 20px;
-    padding-right: 20px;
 
   }
   .collection{
@@ -838,6 +836,10 @@ section {
     text-align: center;
   } 
 
+  .header-container p{
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 
   .discover-button{
     height: 40px;
