--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ header{
 
 }
 
+
 .sidebar ul {
     list-style-type: none;
     padding: 0;
@@ -1092,19 +1093,101 @@ section {
 
 /* About me Page */
 
-.main-page{
+.main-page {
     width: 100%;
-    height: 600px;
+    height: 700px;
     background-color: blue;
 }
 
+.main-page img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.drop-discover {
+    position: absolute;
+    bottom: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: transparent;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    opacity: 0;
+    font-family: "Quicksand", sans-serif;
+    transition: opacity 0.9s ease-in-out, transform 0.9s ease-in-out;
+  }
+
+.black-block {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 180px;
+    height: 40px;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+  
+.welcome-text {
+    color: white;
+    font-size: 20px;
+    font-family: "Quicksand", sans-serif;
+}
+
+.big-text {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%) scale(2);
+    font-size: 48px;
+    color: white;
+    opacity: 0;
+    animation: squeezeIn 1s forwards;
+    font-family: "oswald", sans-serif;
+}
+  
+  @keyframes squeezeIn {
+    0% {
+      transform: translateX(-50%) scale(2);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(-50%) scale(1);
+      opacity: 1;
+    }
+}
+
+
+.oswald-big-text {
+  font-family: "Oswald", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.long-text {
+    position: absolute;
+    top: 43.5%; 
+    left: 5%;
+    font-size: 20px;
+    color: white;
+    opacity: 1; 
+    font-family: "Quicksand", sans-serif;
+  }
 .container {
     width: 100%;
     margin: 0 auto;
     border: 1px solid #ccc;
     overflow: hidden;
     margin-top: 10px;
-    display: none;
+    margin-bottom: 100px;
 }
 
 .tab {
@@ -1129,6 +1212,7 @@ section {
     font-size: 27px;
     color: white;
     overflow: hidden;
+    background-color: transparent;
 }
 
 .tab-button img.tab-img {
@@ -1146,16 +1230,12 @@ section {
     z-index: 1;
 }
 
-.tab-button.active {
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-}
-
 .tab-content {
     display: none;
     padding: 20px;
     background-color: #fff;
     position: relative;
+    height: 300px;
 }
 
 .tab-content.active {
@@ -1171,9 +1251,41 @@ section {
 }
 
 @media screen and (max-width: 767px) {
-    .container{
+    .container {
         display: block;
     }
-    
+}
+
+
+
+
+.last {
+    margin-top: 100px;
+    height: 400px;
+    border-top: solid 1px rgb(224, 224, 224);
+    padding-top: 20px;
 
 }
+
+  .last li{
+    list-style: none;
+}
+
+/* .underline {
+    display: inline-block;
+    position: relative;
+    font-size: 24px; 
+    padding-bottom: 10px; 
+  }
+
+.underline::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 100vw; 
+    height: 1px; 
+    background-color: rgb(222, 221, 221);
+    transform: translateX(-50%);
+  } */
+  
