--- a/contact-style.css
+++ b/contact-style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: black;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -80,6 +80,7 @@ header {
 
 section {
     margin-bottom: 40px;
+    margin: 0px;
 }
 
 .slide-menu a {
@@ -118,11 +119,12 @@ section {
 #contact {
     background-color: #f9f9f9;
     padding: 100px 20px 20px;
-    margin-top: 80px;
-    border-radius: 5px;
     text-align: left;
     max-width: 100%;
-    margin-left: 20px;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    box-sizing: border-box;
 }
 
 .center-phone-container{
@@ -141,6 +143,8 @@ section {
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
     height: 600px;
+    aspect-ratio: 9/16;
+    /* should keep the sive of the phone */
 }
 
 .phone-screen {
@@ -160,6 +164,7 @@ section {
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
+    margin-bottom: 10px;
 }
 
 .phone-buttons button {
@@ -235,7 +240,7 @@ section {
 @media screen and (max-width: 1000px) {
     .slide-menu ul {
         width: 50%;
-        padding-left: 20px;
+        /* padding-left: 20px; */
     }
 
     .one {
@@ -243,8 +248,8 @@ section {
     }
 
     #contact {
-        margin: 80px 20px 20px 20px;
-    }
+        height: 100%;
+    } 
 
     #contactForm .form-row {
         flex-direction: column;
@@ -260,71 +265,86 @@ section {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: normal;
-  }
+}
   
-  .roboto-light {
+.roboto-light {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
-  }
+}
   
-  .roboto-regular {
+.roboto-regular {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: normal;
-  }
+}
   
-  .roboto-medium {
+.roboto-medium {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
-  }
+}
   
-  .roboto-bold {
+.roboto-bold {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
-  }
+}
   
-  .roboto-black {
+.roboto-black {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
-  }
+}
   
-  .roboto-thin-italic {
+.roboto-thin-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
     font-style: italic;
   }
   
-  .roboto-light-italic {
+.roboto-light-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: italic;
   }
   
-  .roboto-regular-italic {
+.roboto-regular-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-style: italic;
-  }
+}
   
-  .roboto-medium-italic {
+.roboto-medium-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: italic;
-  }
+}
   
-  .roboto-bold-italic {
+.roboto-bold-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: italic;
-  }
+}
   
-  .roboto-black-italic {
+.roboto-black-italic {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: italic;
-  }
+}
   
+.underline {
+    display: inline-block;
+    position: relative;
+    font-size: 24px; 
+}
+
+.underline::after {
+    content: '';
+    position: absolute;
+    left: 17vw; 
+    top: 19vh; 
+    width: 90px; 
+    height: 3px; 
+    background-color: black;
+}
