--- a/style.css
+++ b/style.css
@@ -110,6 +110,22 @@ header{
     
 }
 
+#cancel-button {
+    cursor: pointer;
+    padding: 5px 10px;
+    background-color: transparent; 
+    color: black; 
+    border: none;
+    border-radius: 3px;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+#cancel-button:hover {
+    text-decoration: underline;
+
+}
+
 .third-sliding-page {
     position: fixed;
     top: 0;
@@ -193,7 +209,7 @@ section {
     top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    background: rgba(245, 245, 245, 0.776);
+    background: transparent;
     padding: 10px;
     border-radius: 5px;
     z-index: 10; 
@@ -226,7 +242,7 @@ section {
     justify-content: center;
     align-items: center;
     height: 100px;
-    width: 90%;
+    width: 99%;
     position: relative;
     top: -30px;
 }
@@ -347,10 +363,18 @@ section {
 .slide {
     min-width: 100%;
     box-sizing: border-box;
-    padding: 40px;
+    /* padding: 40px; */
     text-align: center;
     background: #f4f4f4;
     border: 1px solid #ddd;
+    object-fit: cover;
+}
+.slide-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .dots {
