--- a/style.css
+++ b/style.css
@@ -373,8 +373,8 @@ section {
     max-width: 100%;
     max-height: 100%;
     object-fit: contain;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
 }
 
 .dots {
@@ -1315,12 +1315,30 @@ section {
     height: 400px;
     border-top: solid 1px rgb(224, 224, 224);
     padding-top: 20px;
+    margin-left: 30px;
 
-  }
+}
 
-  .last li{
+.last li{
     list-style: none;
-  }
+}
+
+.last div{
+    color: black;
+    font-size: 16px;
+    font-family: "Roboto";
+    margin-bottom: 25px;
+    margin-top: 40px;
+}
+
+.last-options{
+    font-size: 16px;
+    display: flex;
+    font-family: "Roboto";
+    color: gray;
+    text-decoration: none;
+    margin-top: 10px;
+}
 
 /* .underline {
     display: inline-block;
