--- a/style.css
+++ b/style.css
@@ -574,35 +574,63 @@ section {
     display: none; 
 }
 
-.card-container {
-    display: inline-flex;
-    gap: 16px;
-    
+.card-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 16px; 
 }
 
 .card {
     background: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 16px;
     text-align: center;
-    min-width: 140px;
-    height: 190px; 
+    min-width: 170px;
+    height: 210px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    flex-shrink: 0; 
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: hidden;
+    position: relative;
 }
 
 .card img {
-    max-width: 100%;
-    border-radius: 4px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    position: absolute; 
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-.t {
+.card-content {
+    padding: 10px;
+    text-align: start;
+    width: 100%;
+    font-family: 'Roboto';
+}  
+
+.tiny-text {
     margin: 8px 0;
+    font-size: 12px;
+    color: rgb(58, 58, 58);
+    font-weight: none;
+    font-family: 'Roboto';
+    font-weight: 200;
+    margin-left: 3px;
 }
+
+.slightly-bigger{
+    margin: 8px 0;
+    font-size: 18px;
+    margin-left: 3px;
+}
+
+
+
 
 /* four container box */
 
@@ -1197,12 +1225,14 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .project-slide img {
     width: 100%;
     height: 100%; 
     object-fit: cover;
+    /* position: relative; */
 }
 
 .dots {
@@ -1226,7 +1256,7 @@ section {
 
 .project-content {
     position: absolute;
-    bottom: 20px; 
+    bottom: 200px; 
     left: 20px; 
     text-align: left;
     color: white;
@@ -1678,6 +1708,8 @@ section {
     text-decoration: none;
     margin-top: 10px;
 }
+
+
 
 /* .underline {
     display: inline-block;
